@@ -5,6 +5,7 @@ class TickTimerInfo:
         self.interval = interval
         self.callback = callback
         self.pydata = pydata
+        self.stop = False
 
 class TickTimer:
     ticks = 0
@@ -13,6 +14,13 @@ class TickTimer:
         self.callbacks = {}
         self.tick_stop = 0
         TickTimer.ticks = ticks
+
+    def __getitem__(self, key):
+        return self.callbacks[key]
+
+    def __setitem__(self, key, value):
+        if isinstance(value, TickTimerInfo):
+            self.callbacks[key] = value
 
     def add(self, key, interval, callback, pydata=None):
         self.callbacks[key] = TickTimerInfo(interval, callback, pydata)
@@ -23,21 +31,32 @@ class TickTimer:
         else:
             self.callbacks[key].next_tick = TickTimer.ticks + self.callbacks[key].interval
 
-    def stop(self):
+    # PyScene.Screen use only
+    def _stop(self):
         self.tick_stop = TickTimer.ticks
 
-    def time_elaspe(self):
+    def stop(self, key):
+        self.callbacks[key].stop = True
+
+    def start(self, key):
+        self.callbacks[key].stop = False
+        self.callbacks[key].next_tick = TickTimer.ticks + self.callbacks[key].interval
+
+    # PyScene.Screen use only
+    def _time_elaspe(self):
         if self.tick_stop > 0:
             elaspe = TickTimer.ticks - self.tick_stop
             for info in self.callbacks.values():
                 info.next_tick += elaspe
 
-    def update(self, ticks):
+    # PyScene.Screen use only
+    def _update(self, ticks):
         TickTimer.ticks = ticks
         for key, item in self.callbacks.items():
-            if ticks > item.next_tick:
-                item.next_tick += item.interval
-                item.callback(item)
+            if item.stop is False:
+                if ticks > item.next_tick:
+                    item.interval = item.callback(item)
+                    item.next_tick += item.interval
 
     def pop(self, key):
         self.callbacks.pop(key)
